# rag_labs

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  config.py  env.example  gui.py  main.py  pyproject.toml  requirements.txt  tatus  test_setup.py
docs/: LAB1_EXPLANATION.md
labs/: __init__.py  lab1_basic_rag.py  lab2_vector_rag.py  lab3_hybrid_rag.py  lab4_advanced_rag.py  lab5_setup_index.py  lab6_semantic_rag.py
models/: __init__.py  config.py  rag.py  search.py
prompts/: README.md  __init__.py  loader.py  prompts.json
utils/: __init__.py  agent.py  azure_search.py  display.py  embeddings.py  index_info.py  llm.py  sql_tool.py
